refactor: simplify search & searchIds methods for Apis
 - Rename some fields & methods in ApiFieldExclusionFilter to make it more understandable
 - Create a new paginated ApiRepository#searchIds method and ApiService#searchIds method. Use it and remove all other searchIds reference.
 - Remove unused ApiRepository#search default methods
 - Add a default implementation of ApiRepository#search(ApiCriteria)
 - Reorder method to follow interface